Changes file for Date-Holidays

1.15 2018-06-16 Feature release, update recommended

- Added implementation of is_holiday method for Date::Holidays::DE

  Ref: https://github.com/jonasbn/perl-date-holidays/issues/18


1.14 2018-06-14 Feature release, update recommended

- Date::Holidays::UK marked as unsupported

- Date::Holidays::UK::EnglandAndWales marked as unsupported 

  Ref: https://github.com/jonasbn/perl-date-holidays/issues/11

- Addressed issue with support for country code UK. This is done with the 
  adapter Date::Holidays::Adapter::UK, which uses Date::Holidays::GB via 
  Date::Holidays::Adapter::GB. 

  Ref: https://github.com/jonasbn/perl-date-holidays/issues/14


1.13 2018-06-12 Feature release, update recommended

- This release integrates Date::Holidays::CA_ES is does so 
  by supporting the region parameter with the value 'ca' via
  Date::Holidays::ES

  Ref: https://github.com/jonasbn/Date-Holidays/issues/28


1.12 2018-06-05 Feature release, update recommended

- Added adapter for US, an implementation adapting Date::Holidays::USFederal 
  but for the official and standard country code 

  Ref: https://github.com/jonasbn/Date-Holidays/issues/27


1.11 2018-06-01 Feature release, update recommended

- Added adapter for:
    Date::Holidays::SK the integration had some flaws, which have now been 
    addressed witht the new adapter

    Ref: https://github.com/jonasbn/Date-Holidays/issues/23


1.10 2018-05-31 Feature release, update recommended

- Added adapter for:
    Date::Holidays::NZ the distribution has been supported for some time, 
    but the latest changes revealed a sub-optimal integration. Support 
    for regions was also added

    Ref: https://github.com/jonasbn/Date-Holidays/issues/22


1.09 2018-05-30 Bug fix release, update not required

- Based on issue #21 several issues with the test suite was spotted
  and corrected, at the same time there was created issues for 